syntax = "proto3";

package product.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/sonuudigital/microservices/gen/product/v1;productv1";

service ProductService {
  rpc GetProductsByIDs(GetProductsByIDsRequest) returns (GetProductsByIDsResponse);
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
  rpc GetProductsByCategoryID(GetProductsByCategoryIDRequest) returns (GetProductsByCategoryIDResponse);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 5;
  int32 stock_quantity = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message GetProductsByIDsRequest {
  repeated string ids = 1;
}

message GetProductsByIDsResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  string category_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message UpdateProductRequest {
  string id = 1;
  string category_id = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  int32 stock_quantity = 6;
}

message DeleteProductRequest {
  string id = 1;
}

message GetProductsByCategoryIDRequest {
  string category_id = 1;
}

message GetProductsByCategoryIDResponse {
  repeated Product products = 1;
}
